# mimir-mcp

./: .gitignore  CLAUDE.md  HowTo.md  connect-claude.ps1  connect-claude.sh  connect-copilot.ps1  connect-copilot.sh  install.ps1  install.sh  mimir.py  pyproject.toml
docs/: plan-behavioral-tags-chrono-fts.md  plan-v2-tool-redesign.md
tests/: bench_carps.py  bench_rank_eval.py  bench_topcat.py  conftest.py  test_behavioral_tags.py  test_blueprints.py  test_chrono_fts.py  test_concept_synonyms.py  test_literals.py  test_ranking_idf.py  test_semantic_search.py  test_smoke.py  test_symbol_index.py  test_text_profile_extensions.py  test_tools.py
